--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -2,12 +2,12 @@
 body, h1, h2, h3, h4, h5, h6, p, dl, dt, dd, ul, ol, li, button, input, textarea,
 th, td { margin: 0;padding: 0;}
 body,
-button, input, select, textarea { font-family: 'Avenir', Helvetica, Arial, sans-serif;}
+button, input, select, textarea { font-family: 'Avenir', Helvetica, Arial, sans-serif;touch-action: manipulation;font-size: .28rem;}
 em{ font-style: normal; } /* 将斜体扶正 */
 /* 重置列表元素 */
 ul, ol,li { list-style: none; }
 /* 重置文本格式元素 */
-a { text-decoration: none;}
+a { text-decoration: none;color: #fff;}
 a:hover { text-decoration: none }
 /* 重置表单元素 */
 legend { color: #000; } /* for ie6 */
